数据库更新，部分的具体点位显示完成

--- a/src/main/webapp/source/assets/plugins/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/source/assets/plugins/bootstrap/css/bootstrap.css
@@ -39,7 +39,9 @@ main {
 figure {
   margin: 1em 40px;
 }
-
+.open>.dropdown-menu{
+  display:block;
+}
 hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
